# incrementum

./: .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
app/incrementum_api/: main.py
app/incrementum_api/controllers/: __init__.py  incrementa.py
app/incrementum_api/routers/: __init__.py  incrementa.py
app/incrementum_api/services/: __init__.py  incrementa.py
app/incrementum_api/settings/: __init__.py  _app.py  _gunicorn_config.py  _redis.py  _server.py
scripts/: start.sh
